[tool.poetry]
name = "issacapple"
version = "0.1.0"
description = ""
authors = ["Mateus Lucas <mateuslucas1879@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pygame = "^2.5.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
